app/views/grading/sample_compile_output.txt
office/TravelManager.java:5: error: package edu.ncsu.csc216.travel.model.vacation does not exist
import edu.ncsu.csc216.travel.model.vacation.CapacityException;
                                            ^
office/TravelManager.java:6: error: package edu.ncsu.csc216.travel.model.vacation does not exist
import edu.ncsu.csc216.travel.model.vacation.Reservation;
                                            ^
office/TravelManager.java:7: error: package edu.ncsu.csc216.travel.model.vacation does not exist
import edu.ncsu.csc216.travel.model.vacation.Tour;
                                            ^
office/TravelManager.java:8: error: package edu.ncsu.csc216.travel.model.participants does not exist
import edu.ncsu.csc216.travel.model.participants.Client;
                                                ^
office/TravelManager.java:32: error: cannot find symbol
   Tour addNewTour(String kind, String name, LocalDate startDate, int duration, 
   ^
  symbol:   class Tour
  location: interface TravelManager
office/TravelManager.java:33: error: cannot find symbol
         int basePrice, int capacity) throws DuplicateTourException;
                                             ^
  symbol:   class DuplicateTourException
  location: interface TravelManager
office/TravelManager.java:43: error: cannot find symbol
   Client addNewClient(String contact, String userName) throws DuplicateClientException;
   ^
  symbol:   class Client
  location: interface TravelManager
office/TravelManager.java:43: error: cannot find symbol
   Client addNewClient(String contact, String userName) throws DuplicateClientException;
                                                               ^
  symbol:   class DuplicateClientException
  location: interface TravelManager
office/TravelManager.java:63: error: cannot find symbol
   Reservation addNewReservation(int clientIndex, int filteredTourIndex, int numInParty) throws CapacityException;
   ^
  symbol:   class Reservation
  location: interface TravelManager
office/TravelManager.java:63: error: cannot find symbol
   Reservation addNewReservation(int clientIndex, int filteredTourIndex, int numInParty) throws CapacityException;
                                                                                                ^
  symbol:   class CapacityException
  location: interface TravelManager
office/TravelManager.java:75: error: cannot find symbol
   Reservation addOldReservation(Client c, Tour t, int numInParty, int confCode) throws CapacityException;
                                 ^
  symbol:   class Client
  location: interface TravelManager
office/TravelManager.java:75: error: cannot find symbol
   Reservation addOldReservation(Client c, Tour t, int numInParty, int confCode) throws CapacityException;
                                           ^
  symbol:   class Tour
  location: interface TravelManager
office/TravelManager.java:75: error: cannot find symbol
   Reservation addOldReservation(Client c, Tour t, int numInParty, int confCode) throws CapacityException;
   ^
  symbol:   class Reservation
  location: interface TravelManager
office/TravelManager.java:75: error: cannot find symbol
   Reservation addOldReservation(Client c, Tour t, int numInParty, int confCode) throws CapacityException;
                                                                                        ^
  symbol:   class CapacityException
  location: interface TravelManager
office/TravelManager.java:84: error: cannot find symbol
   Reservation cancelReservation(int clientIndex, int reservationIndex);
   ^
  symbol:   class Reservation
  location: interface TravelManager
office/TravelManager.java:91: error: cannot find symbol
   Tour cancelTour(int filteredTourIndex);
   ^
  symbol:   class Tour
  location: interface TravelManager
16 errors
